# MuseAI

./: .gitignore  AGENTS.md  PRODUCT.md  README.md  README_EN.md  fix_works.py  index.html  package-lock.json  package.json  rewrite_deai.py  rewrite_examples.py  rewrite_works.py  rewrite_workspace_dir.py  vite.config.ts
.claude/: launch.json
scratch/: fix_json.cjs  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/resources/skills/fanqie-short-nuexin-outline/: SKILL.md
src-tauri/resources/skills/fanqie-short-nuexin-outline/agents/: openai.yaml
src-tauri/resources/skills/fanqie-short-nuexin-outline/references/: fanqie-short-nuexin-patterns.md
src-tauri/resources/skills/fanqie-short-nuexin-writer/: SKILL.md
src-tauri/resources/skills/fanqie-short-nuexin-writer/agents/: openai.yaml
src-tauri/resources/skills/fanqie-short-nuexin-writer/references/: style_examples.md
src-tauri/resources/skills/fanqie-xuanhuan-outline/: SKILL.md
src-tauri/resources/skills/fanqie-xuanhuan-outline/agents/: openai.yaml
src-tauri/resources/skills/fanqie-xuanhuan-outline/references/: fanqie-xuanhuan-patterns.md
src-tauri/resources/skills/fanqie-xuanhuan-writer/: SKILL.md
src-tauri/resources/skills/kitt-writer/: SKILL.md
src-tauri/src/: book_travel.rs  crawler.rs  fs_commands.rs  lib.rs  mobile_server.rs  models.rs  utils.rs
src-tauri/src/agent/: mod.rs  sessions.rs
src-tauri/src/commands/: fs.rs  skills.rs  versions.rs  workspace.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/tools/: mod.rs  registry.rs
src-tauri/windows/: main.wxs
(+84 files in other folders)
