[package]
name = "museai"
version = "0.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
glob = "0.3"
regex = "1"
walkdir = "2"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tokio = { version = "1.52.3", features = ["sync"] }
scraper = "0.27.0"
chrono = "0.4"
axum = "0.8.9"
tokio-stream = "0.1.18"
async-stream = "0.3.6"
tower = { version = "0.5", features = ["util"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSData"] }
